Simplify async API: remove sse for now
